syntax = "proto3";

package aichat.v1;

import "google/api/annotations.proto";

option go_package = "robot-demo/api/aichat/v1;v1";

// Chat服务定义
service Aichat {
  // 注册
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/aiChat/register"
      body: "*"
    };
  }

  // 登录
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/aiChat/login"
      body: "*"
    };
  }

  // SendMessage 发送聊天消息
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {
    option (google.api.http) = {
      post: "/api/aiChat/sendMessage"
      body: "*"
    };
  }
}
// 注册请求
message RegisterRequest {
  string username = 1;
  string password = 2;
}
// 注册响应
message RegisterResponse {
  string token = 1;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  string token = 1;
}

// 发送消息请求
message SendMessageRequest {
  string question = 1;
}

// 发送消息响应
message SendMessageResponse {
  string answer = 1;
}
